# Hidromira

./: .env.example  .gitignore  CONFIGURAR_NGROK_AUTHTOKEN.md  EXPONER_CON_NGROK.md  GUIA_IOT.md  INSTRUCCIONES.md  README.md  api_rest.py  app.py  auth.py  backup_status.json  bitacora2.csv  control_arduino.py  db.py  diagnostico_sensor.py  exponer_ngrok.ps1  exponer_streamlit_ngrok.ps1  generate_historical_data.py  historical_data.json  iot_config.py  iot_handler.py  launch_all.bat  launch_windows.ps1  maintenance_log.json  monitor_realtime.py  package-lock.json  pyproject.toml  realtime.py  registers.json  requirements.txt  schema.sql  test_alert_email.py  test_email.py  test_thingspeak.py  users.json  verificar_hardware.py  web_hidro_pro.py
Download the WitMotion Software/Witmotion(V2025.11.26.0) (1)/Config/CommandPanel/: hwt9073-485.xml
Download the WitMotion Software/Witmotion(V2025.11.26.0) (1)/Config/Products/: product-power.xml  products.xml  recent-product.xml
Download the WitMotion Software/Witmotion(V2025.11.26.0) (1)/Temp/: app_pids.xml
arduino_control/: arduino_control.ino
backups/: email_config_2026-06-23_180613.json  users_2026-06-23_180613.json
docs/: CONFIGURAR_GMAIL.md  CREDENCIALES.md  INSTRUCCIONES.md  PRODUCCION.md
scripts/: cerrar_com3.py  diagnostico_sensor.py  generate_demo_data.py  reset_admin.py  test_db_and_backup.py  test_email.py  test_rich_emails.py  test_sensor_auto.py  test_sensor_simple.py  test_tago.py  test_thingspeak.py  test_vibration_registers.py  test_zone_logic.py
(+8 files in other folders)
